<resources>
    <string name="app_name">Excellence Technology</string>
    <string name="search_menu">Search Courses</string>
    <string name="java_desc">Java is a programming language and a platform. Java is a high level, robust, object-oriented and secure programming language.Java was developed by Sun Microsystems (which is now the subsidiary of Oracle) in the year 1995. James Gosling is known as the father of Java. Before Java, its name was Oak. Since Oak was already a registered company, so James Gosling and his team changed the name from Oak to Java.</string>
    <string name="html_desc">HTML tutorial or HTML 5 tutorial provides basic and advanced concepts of HTML. Our HTML tutorial is developed for beginners and professionals. In our tutorial, every topic is given step-by-step so that you can learn it in a very easy way. If you are new in learning HTML, then you can learn HTML from basic to a professional level and after learning HTML with CSS and JavaScript you will be able to create your own interactive and dynamic website. But Now We will focus on HTML only in this tutorial.</string>
    <string name="python_desc">Python is a general purpose, dynamic, high-level, and interpreted programming language. It supports Object Oriented programming approach to develop applications. It is simple and easy to learn and provides lots of high-level data structures.
        Python is easy to learn yet powerful and versatile scripting language, which makes it attractive for Application Development.
        Pythons syntax and dynamic typing with its interpreted nature make it an ideal language for scripting and rapid application development.
        Python supports multiple programming pattern, including object-oriented, imperative, and functional or procedural programming styles.
        Python is not intended to work in a particular area, such as web programming. That is why it is known as multipurpose programming language because it can be used with web, enterprise, 3D CAD, etc.</string>
    <string name="js_desc">JavaScript (js) is a light-weight object-oriented programming language which is used by several websites for scripting the webpages. It is an interpreted, full-fledged programming language that enables dynamic interactivity on websites when applied to an HTML document. It was introduced in the year 1995 for adding programs to the webpages in the Netscape Navigator browser. Since then, it has been adopted by all other graphical web browsers. With JavaScript, users can build modern web applications to interact directly without reloading the page every time. The traditional website uses js to provide several forms of interactivity and simplicity.</string>
    <string name="php_desc">PHP is an open-source, interpreted, and object-oriented scripting language that can be executed at the server-side. PHP is well suited for web development. Therefore, it is used to develop web applications (an application that executes on the server and generates the dynamic page.).
        PHP was created by Rasmus Lerdorf in 1994 but appeared in the market in 1995. PHP 7.4.0 is the latest version of PHP, which was released on 28 November.</string>
    <string name="cpp_desc">C++ is a general purpose, case-sensitive, free-form programming language that supports object-oriented, procedural and generic programming.
        C++ is a middle-level language, as it encapsulates both high and low level language features.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_logout">Log out</string>


    <string name="long_text">thor 2 full movie download in hindi 720p thor 2 full movie download in hindi 720p thor 2 full movie download in hindi 720p thor 2 full movie download in hindi 720p</string>
    <string name="audio_sub">Audio &amp; Subtitle </string>
    <string name="lock">Lock</string>
    <string name="speed_1x">Speed(1x)</string>
    <string name="rotate">Rotate</string>
    <string name="tap_to_unlock">Tap to Unlock</string>
    <string name="screen_locked">Screen Locked</string>
    <string name="unlock_controls">Unlock Controls?</string>
    <string name="folder_name">Folder Name</string>
    <string name="_10_videos">10 videos</string>
    <string name="_1_00gb">1.00Gb</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="search">Search file name</string>


    <string name="open">open</string>
    <string name="close">close</string>
    <string name="about_us">About us</string>
    <string name="version">Version</string>
    <string name="_1_0_1">1.0.1</string>
    <string name="direct_n_app">Direct\nApp</string>
    <string name="app_n_link">App\nLink</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="title">Name:</string>
    <string name="path">Path:</string>
    <string name="size">Size:</string>
    <string name="duration">Duration:</string>
    <string name="resolution">Resolution:</string>

    <string name="facebook_app_id">654062652440055</string>
    <string name="fb_login_protocol_scheme">fb654062652440055</string>
    <string name="menu_profile">Profile</string>
    <string name="let_s_upgrade_your_skills">Let\'s upgrade your skills</string>
    <string name="hello_user">Hello, User</string>
    <string name="designing">Designing</string>
    <string name="marketing">Marketing</string>
    <string name="on_going_offers">On-Going Offers</string>
    <string name="workshops">WorkShops</string>
    <string name="gallery">Gallery</string>
    <string name="reach_us">Reach us</string>
    <string name="call_us">Call us</string>
    <string name="text_us">Text us</string>
    <string name="mail_us">Mail us</string>
    <string name="visit_us">Visit us</string>
    <string name="marketing_logo">marketing_logo</string>
    <string name="menu_contact">Contact us</string>
    <string name="login">Login</string>
    <string name="email">Email</string>


</resources>