<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.excellencetechnology.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/nav_profile"-->
<!--        android:name="com.excellencetechnology.fragments.ProfileFragment"-->
<!--        android:label="@string/menu_profile"-->
<!--        tools:layout="@layout/fragment_profile" />-->

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.excellencetechnology.fragments.ContactUsFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.excellencetechnology.fragments.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_gallery" />

</navigation>